Fix overflowing images

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -279,6 +279,7 @@ th {
 img {
   height: auto;
   line-height: 0;
+  width: 100%;
 }
 
 .singular-attachment img {
